--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "next build --webpack",
-    "dev": "next dev --webpack -p 8004",
+    "build": "next build",
+    "dev": "next dev -p 8004",
     "lint": "next lint",
     "start": "next start"
   },
